--- a/YuWaShop/Home/SubVC/commentManager/view/CommentHeadView.xib
+++ b/YuWaShop/Home/SubVC/commentManager/view/CommentHeadView.xib
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -18,45 +19,58 @@
                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfV-eE-IFJ">
                     <rect key="frame" x="0.0" y="15" width="125" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lYX-UM-ekK">
                     <rect key="frame" x="125" y="15" width="125" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D8Y-DL-xhE">
                     <rect key="frame" x="250" y="15" width="125" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总点评数" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G36-1x-9XO">
                     <rect key="frame" x="0.0" y="49" width="125" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日点评数" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hV8-Vy-gOJ">
                     <rect key="frame" x="125" y="49" width="125" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日中差评数" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDE-3p-rx4">
                     <rect key="frame" x="250" y="49" width="125" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4w1-Sr-10W">
                     <rect key="frame" x="124" y="15" width="1" height="50"/>
                     <color key="backgroundColor" red="0.89233386516571045" green="0.89720785617828369" blue="0.90221238136291504" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="1" id="KVi-lu-TLP"/>
+                        <constraint firstAttribute="width" constant="0.5" id="KVi-lu-TLP"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kpW-xX-njR">
                     <rect key="frame" x="250" y="15" width="1" height="50"/>
                     <color key="backgroundColor" red="0.89233386516571045" green="0.89720785617828369" blue="0.90221238136291504" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="1" id="Sl9-tJ-IC2"/>
+                        <constraint firstAttribute="width" constant="0.5" id="Sl9-tJ-IC2"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F7A-We-dkf">
+                    <rect key="frame" x="0.0" y="79.5" width="375" height="0.5"/>
+                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="0.5" id="Khv-81-Khi"/>
                     </constraints>
                 </view>
             </subviews>
@@ -77,9 +91,12 @@
                 <constraint firstItem="NDE-3p-rx4" firstAttribute="top" secondItem="D8Y-DL-xhE" secondAttribute="bottom" constant="10" id="ScA-3D-4yg"/>
                 <constraint firstItem="bfV-eE-IFJ" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="1:3" id="Upx-zJ-0oN"/>
                 <constraint firstItem="lYX-UM-ekK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="YGg-dO-zuE"/>
+                <constraint firstAttribute="trailing" secondItem="F7A-We-dkf" secondAttribute="trailing" id="cNC-QU-jqp"/>
                 <constraint firstItem="NDE-3p-rx4" firstAttribute="leading" secondItem="hV8-Vy-gOJ" secondAttribute="trailing" id="cY8-fe-RTt"/>
                 <constraint firstItem="hV8-Vy-gOJ" firstAttribute="leading" secondItem="4w1-Sr-10W" secondAttribute="trailing" id="dLs-6n-san"/>
+                <constraint firstItem="F7A-We-dkf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="f72-h3-wYN"/>
                 <constraint firstItem="bfV-eE-IFJ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="mtf-Vw-h17"/>
+                <constraint firstAttribute="bottom" secondItem="F7A-We-dkf" secondAttribute="bottom" id="nGY-ar-AMZ"/>
                 <constraint firstItem="NDE-3p-rx4" firstAttribute="width" secondItem="hV8-Vy-gOJ" secondAttribute="width" id="nYV-9d-TQL"/>
                 <constraint firstAttribute="trailing" secondItem="D8Y-DL-xhE" secondAttribute="trailing" id="nkU-9Q-8sa"/>
                 <constraint firstItem="D8Y-DL-xhE" firstAttribute="leading" secondItem="lYX-UM-ekK" secondAttribute="trailing" id="pD2-1m-851"/>
@@ -89,7 +106,7 @@
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="266" y="-39"/>
+            <point key="canvasLocation" x="265.5" y="-39"/>
         </view>
     </objects>
 </document>
